[package]
name = "jqdata"
description = "Rust implementation for JQData client"
version = "0.3.4"
authors = ["Zhe Jiang <nju.jiangzhe@gmail.com>"]
edition = "2018"
keywords = ["joinquant", "quant", "jqdata"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jiangzhe/jqdata"
readme = "README.md"

[workspace]
members = ["jqdata-model", "jqdata-derive"]

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
csv = "1.1"
mockito = "0.23"
jqdata-derive = { version = "0.2", path = "./jqdata-derive" }
jqdata-model = { version = "0.3.3", path = "./jqdata-model" }
futures-util = "0.3"
futures = "0.3"


[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }

