[package]
name = "jqdata-blocking"
description = "Blocking client of JQData"
version = "0.1.1"
authors = ["jiangzhe <zhe.jiang@transwarp.io>"]
edition = "2018"
keywords = ["joinquant", "quant", "jqdata"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jiangzhe/jqdata/jqdata-blocking"
workspace = ".."

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
csv = "1.1"
mockito = "0.23"
jqdata-derive = { version = "0.1.0", path = "../jqdata-derive" }
